crates/aven-check/tests/fixtures/check/valid/type-variables-and-known-types.av
User = { name: Text }
id : (a) -> a
id = (value) => value
user : User = value

value = _
