crates/aven-check/tests/fixtures/check/invalid/named-family-spread.av
Base = {
  value: Int
}

RankRow = {
  ..Base
  value: Int
  priority(): Int =>
    .value
}
